<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Story</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Stay connect to each other!</string>
    <string name="title_welcome_page">Story App</string>
    <string name="welcome_page">Selamat datang di Story App</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="email_error">Email tidak sesuai</string>
    <string name="email_null">Email tidak boleh kosong</string>
    <string name="password">Password</string>
    <string name="password_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="password_null">Password tidak boleh kosong</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Bagikan Cerita tak terlupakan mu di sini</string>
    <string name="name">Nama</string>
    <string name="name_error">Nama tidak boleh kosong</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="logout_button">Tombol Keluar</string>
    <string name="logout_acc">Apakah Anda yakin?</string>
    <string name="confirm_logout">Ya</string>
    <string name="confirm_not_logout">Tidak</string>
    <string name="yeah">Yeah!</string>
    <string name="setting">Pengaturan</string>
    <string name="map">Peta</string>
    <string name="account_registered">Selamat, akun Anda telah terdaftar!</string>
    <string name="account_register_failed">Nama, Email, dan Password tidak boleh kosong</string>
    <string name="next">Lanjut</string>
    <string name="login_success">Anda berhasil login. Ayo kita mulai buat cerita</string>
    <string name="congratulation">Selamat!</string>
    <string name="story_name">Nama Cerita</string>
    <string name="story_description">Deskripsi Cerita</string>
    <string name="detail_story">Detail</string>
    <string name="create_story">Buat Cerita</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language">change language</string>
    <string name="add_story">Tambahkan cerita</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Upload</string>
    <string name="detail_page">Halaman Detail</string>
    <string name="home_page">Halaman Utama</string>
    <string name="map_page">Halaman Peta</string>
    <string name="add_image_description">deskripsi gambar</string>
    <string name="image_story">Gambar cerita</string>
    <string name="add_image_from_camera">tambah gambar lewat kamera</string>
    <string name="add_gallery_description">tambah gambar galeri</string>
    <string name="btn_upload_description">Unggah Story</string>
    <string name="add_desc_description">Tambah deskripsi cerita</string>
    <string name="empty_image_warning">Masukan terlebih dahulu gambar</string>
    <string name="image_cannot_be_uploaded">Gambar tidak bisa diunggah</string>
    <string name="image_cannot_be_loaded">Gambar tidak bisa ditampilkan</string>
    <string name="title_map">Peta</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelit</string>
    <string name="terrain_type">Medan</string>
    <string name="hybrid_type">Hibrida</string>
    <string name="retry">Coba lagi</string>
    <string name="add_location">Kirim lokasi?</string>
    <string name="location_alert">Lokasi tidak tersedia</string>
    <string name="permission_not_granted">Izin tidak diberikan</string>
</resources>