<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never"
        android:contentDescription="@string/logout_button"/>
    <item
        android:id="@+id/menu_change_language"
        android:title="@string/change_language"
        android:icon="@drawable/ic_setting"
        app:showAsAction="never"
        android:contentDescription="@string/setting"/>
    <item
        android:id="@+id/menu_map"
        android:title="@string/map"
        android:icon="@drawable/ic_map"
        android:description="@string/map"
        app:showAsAction="ifRoom" />
</menu>